# Salesforce-vsc-ai-workspace

./: .forceignore  .gitignore  AGENTS.md  AI-CONTEXT.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  sfdx-project.json
.ai/config/: README.md  search-synonyms.yaml  workspace.example.json  workspace.local.json.example
.ai/deployment/: branch-map.yaml  environments.yaml  gates.yaml
.ai/knowledge/: README.md  index.yaml  sync-policy.yaml  sync-state.json
.ai/setup/: first-run.md  prerequisites.md  troubleshooting.md
.ai/templates/: config-impact.yaml  context-pack.md  design-review.md  knowledge-domain.md  knowledge-import-manifest.yaml  knowledge-note.md  pre-promote-report.md  qa-how-to-test.md  solution-design.md  technical-documentation.md  work-item-summary.md  work-packet.yaml
.ai/wiki/: README.md  module-map.yaml  page-template.md  wiki-publish-policy.yaml
.github/: copilot-instructions.md
.github/agents/: azure-wiki-documentation-agent.agent.md  bug-investigator.agent.md  code-review.agent.md  implementation-planner.agent.md  knowledge-curator.agent.md  qa-how-to-test-writer.agent.md  release-readiness-reviewer.agent.md  solution-architect.agent.md  solution-design-reviewer.agent.md  tech-doc-writer.agent.md  work-item-context-curator.agent.md
.github/prompts/: build-context.prompt.md  build-knowledge-context.prompt.md  config-delta-plan.prompt.md  config-impact.prompt.md  (+21 more)
ai_workspace/: __init__.py
force-app/: AGENTS.md
scripts/: configure.py  doctor.ps1  doctor.py  doctor.sh  setup.ps1  setup.py  setup.sh  workspace.ps1
(+159 files in other folders)
