[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-ai-workspace-tools"
version = "0.1.0"
description = "Local deterministic tools for a Copilot-only Salesforce AI Workspace."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
knowledge = [
    "python-docx>=1.1",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "markdown-it-py>=3.0",
]

[tool.setuptools]
package-dir = {"" = ".ai/skills/python"}
include-package-data = false

[tool.setuptools.packages.find]
where = [".ai/skills/python"]
include = ["ai_workspace*"]
